@@ -25,6 +25,8 @@ x2goclient (4.0.4.1-0x2go1) UNRELEASED; urgency=low
       overwriting it.
     - x2goutils.cpp: correct typo to fix compile errors.
     - onmainwindow.cpp: drop a redundant variable and fix empty env check.
+    - onmainwindow.cpp: add more newlines to scdaemon error output. Use
+      trayQuit() method to really quit the client.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 26 May 2015 21:42:09 +0200
 
